[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Chest.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/open chest.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/TreasurChests/treasure chests.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.9653, 7.45573 )

[sub_resource type="Animation" id=2]
resource_name = "Flash"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 9, 15, 21, 27, 27, 33, 39, 51, 87 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Open"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 33, 39, 45, 45, 45, 45, 45, 45, 51 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="Grabbed" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 3 )
vframes = 15
hframes = 6
frame = 27

[node name="Animation" type="AnimationPlayer" parent="Area2D"]
anims/Flash = SubResource( 2 )
anims/Open = SubResource( 3 )
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="Area2D/Animation" to="Area2D" method="_on_Animation_animation_finished"]
